# ScholarSnap

./: .gitignore  Dockerfile  README.md  agent.py  arxiv.py  celery_app.py  celerybeat-schedule  db.py  docker-compose.yml  flower_db  gmail_auth.py  gmail_service.py  main.py  pyproject.toml  supervisord.conf  tasks.py
